<resources>
    <string name="app_name">bhramand123</string>
    <string name="bhramand">Bhramand</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="enter_the_email">Enter your email here</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="sing_in">Sign In</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="phone_no">Enter your phone number</string>
    <string name="place_name">Enter the place name</string>
    <string name="enter_place_description">Description</string>
    <string name="select_the_location">Location</string>
    <string name="post">Post</string>
    <string name="district_name">Enter district name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="event_title">Event Title</string>
    <string name="event_desc">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_place">Event Place</string>
    <string name="publish">Publish</string>
    <string name="get_location">Get Direction</string>

</resources>
